--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,23 +69,25 @@
     <Compile Include="Assets\Scripts\TargetScript.cs" />
     <Compile Include="Assets\Scripts\KinematicSeek.cs" />
     <Compile Include="Assets\Scripts\VelocityMatchMain.cs" />
+    <Compile Include="Assets\Scripts\CollisionAvoidanceMain.cs" />
     <Compile Include="Assets\Scripts\KinematicSteeringOutput.cs" />
     <Compile Include="Assets\Scripts\FaceMain.cs" />
     <Compile Include="Assets\Scripts\AlignMain.cs" />
     <Compile Include="Assets\Scripts\WanderMain.cs" />
     <Compile Include="Assets\Scripts\KinematicArrive.cs" />
+    <Compile Include="Assets\Scripts\Separation.cs" />
     <Compile Include="Assets\Scripts\ArriveMain.cs" />
     <Compile Include="Assets\Scripts\Align.cs" />
     <Compile Include="Assets\Scripts\Kinematic.cs" />
     <Compile Include="Assets\Scripts\AgentTeleport.cs" />
     <Compile Include="Assets\Scripts\Agent.cs" />
-    <Compile Include="Assets\Scripts\CharacterScript.cs" />
     <Compile Include="Assets\Scripts\Wander.cs" />
     <Compile Include="Assets\Scripts\KinematicWander.cs" />
     <Compile Include="Assets\Scripts\Face.cs" />
     <Compile Include="Assets\Scripts\Arrive.cs" />
     <Compile Include="Assets\Scripts\SteeringOutput.cs" />
     <Compile Include="Assets\Scripts\LookWhereYoureGoingMain.cs" />
+    <Compile Include="Assets\Scripts\SeparationMain.cs" />
     <Compile Include="Assets\Scripts\Pursue.cs" />
     <Compile Include="Assets\Scripts\VelocityMatch.cs" />
     <Compile Include="Assets\Scripts\Evade.cs" />
@@ -93,6 +95,7 @@
     <Compile Include="Assets\Scripts\FleeMain.cs" />
     <Compile Include="Assets\Scripts\SeekMain.cs" />
     <Compile Include="Assets\Scripts\PursueMain.cs" />
+    <Compile Include="Assets\Scripts\CollisionAvoidance.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\UnityAssetStoreExports\Witchery AssetPack\Readme.txt" />
